Issue #14592: A relative import will raise a KeyError if __package__ or __name__ are not set in globals.

Thanks to Stefan Behnel for the bug report.